<resources>
    <string name="app_name">Tenalist</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Menu-->
    <string name="menu_home">Home</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_message">Message</string>
    <string name="menu_history">History</string>
    <string name="menu_favorite">Favorite</string>

    <!--Error-->
    <string name="login_error">Username or password is incorrect</string>
    <string name="network_error">Please connect to a network</string>
    <string name="register_error_weak_password">The password is invalid it must 6 characters at least</string>
    <string name="register_error_email_in_used">The email address is already in use by another account.</string>
    <string name="error_wrong_password">Please insert your current password</string>
    <string name="error_something_wrong">Something is wrong. Try again.</string>
    <string name="error_password">Wrong password</string>

    <!--Register and Login-->
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="proceed">Proceed</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Full Name</string>
    <string name="cancel">Cancel</string>
    <string name="conf_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="phone">Phone number</string>
    <string name="register_button">New user? Register</string>
    <string name="cancel_btn">I\'m already a member</string>
    <string name="form_role">Choose your role</string>
    <string name="agree_terms_conditions">Agree with terms and conditions</string>

    <!--Edit Profile-->
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile">Profile</string>
    <string name="role">Role</string>
    <string name="bazaar">bazaar_count</string>
    <string name="update">Update</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="verification">You\'re not fully verified. Scan your id now</string>
    <string name="verification_add">Your verification</string>

    <!--Profile Events-->
    <string name="list_event">List of Events</string>
    <string name="menu_event">Events</string>
    <string name="no_event">No Event</string>
    <string name="connection_problem">Your connection is unstable. Try again.</string>
    <string name="rating">%s/5</string>

    <!--Zeros-->
    <string name="zero_organizer">Never holds a bazaar</string>
    <string name="zero_tenant">Never joins a bazaar</string>
    <string name="zero_slot">Sorry, slot is full</string>

    <string-array name="paymentMethod">
        <item>Down Payment</item>
        <item>Full Payment</item>
    </string-array>
    <string-array name="boothCode">
        <item>1</item>
        <item>2</item>
        <item>11</item>
        <item>12</item>
    </string-array>

</resources>
