<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".activity.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_header"
            app:layout_constraintBottom_toTopOf="@id/group_form"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_heading"
            style="@style/TextAppearance.MyApp.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/heading_horizontal_margin"
            android:paddingEnd="@dimen/activity_padding"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/img_header"
            app:layout_constraintEnd_toEndOf="@id/img_header" />

        <LinearLayout
            android:id="@+id/group_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_header">

            <!--<com.google.android.material.textfield.TextInputLayout-->
            <!--android:id="@+id/til_username"-->
            <!--style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="@dimen/text_margin">-->

            <!--<com.google.android.material.textfield.TextInputEditText-->
            <!--android:id="@+id/edt_username"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/username" />-->

            <!--</com.google.android.material.textfield.TextInputLayout>-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_conf_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_conf_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/conf_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/rg_role"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_rb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="2dp"
                    android:text="@string/form_role"
                    android:textAlignment="textStart"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rb_organizer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableTop="@drawable/ic_organizer"
                    android:layout_marginTop="@dimen/text_margin"/>

                <RadioButton
                    android:id="@+id/rb_tenant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableTop="@drawable/ic_tenant"
                    android:layout_marginTop="@dimen/text_margin"/>

            </RadioGroup>

            <CheckBox
                android:id="@+id/cb_terms_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree_terms_conditions" />

            <!--<de.hdodenhof.circleimageview.CircleImageView-->
            <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:src="@drawable/ic_tenant"-->
            <!--app:civ_border_width="2dp"-->
            <!--app:civ_border_color="@color/colorPrimary"/>-->

            <TextView
                android:id="@+id/tv_error_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:textColor="@color/colorAccent"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_register"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginEnd="0dp"
                android:padding="0dp"
                android:text="@string/proceed"
                app:cornerRadius="12dp" />

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:text="@string/cancel_btn"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:indeterminateTint="@color/colorPrimary"
                android:visibility="gone" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>