<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:orientation="vertical">-->

    <ImageView
        android:id="@+id/img_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_header"
        app:layout_constraintBottom_toTopOf="@id/group_form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_heading"
        style="@style/TextAppearance.MyApp.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/heading_horizontal_margin"
        android:paddingEnd="@dimen/activity_padding"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/img_header"
        app:layout_constraintEnd_toEndOf="@id/img_header" />


    <LinearLayout
        android:id="@+id/group_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding"
        app:layout_constraintTop_toBottomOf="@id/tv_heading">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:textColor="@color/colorAccent"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_login"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="@dimen/text_margin"
            android:padding="0dp"
            android:text="@string/sign_in"
            app:cornerRadius="12dp" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/register_button"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:indeterminateTint="@color/colorPrimary"
            android:visibility="gone" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>