<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorAccent"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <!--<ImageView-->
        <!--android:id="@+id/img_profile"-->
        <!--android:layout_width="75dp"-->
        <!--android:layout_height="75dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginBottom="@dimen/activity_vertical_margin"-->
        <!--android:contentDescription="@string/profile_picture"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toStartOf="@+id/guideline2"-->
        <!--app:layout_constraintHorizontal_chainStyle="spread"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:srcCompat="@mipmap/ic_launcher_round" />-->

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="2dp" />

    <ProgressBar
        android:id="@+id/progress_bar_img"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:indeterminateTint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/tv_profile_edit"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@id/img_profile" />

    <TextView
        android:id="@+id/tv_profile_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        app:layout_constraintBottom_toBottomOf="@+id/img_profile"
        app:layout_constraintStart_toStartOf="@id/tv_profile_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_name"
        android:textColor="@color/colorPrimary"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tv_profile_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_profile_name"
        app:layout_constraintTop_toTopOf="@+id/tv_profile_name" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>
